--- a/start-20.1.1/main.html
+++ b/start-20.1.1/main.html
@@ -169,8 +169,7 @@
 				
 				<div id=school>
 				
-					<h3>School</h3>
-					<a href="https://www.greenek12.instructure.com" target="_blank"><p>Canvas</p></a>
+					<h3>School</h3>\
 					<a href="https://www.drive.google.com" target="_blank"><p>Drive</p></a>
 					<a href="https://www.docs.google.com" target="_blank"><p>Docs</p></a>
 					<a href="https://www.slides.google.com" target="_blank"><p>Slides</p></a>
