changed stuff dont worry about the details

--- a/start-19.12.0/main.html
+++ b/start-19.12.0/main.html
@@ -49,14 +49,6 @@
                     <a href="http://4chan.org" target="_blank"><p>4Chane</p></a>
                     <a href="https://reddit.com" target="_blank"><p>Reddit</p></a>
                 </div>
-                <div id=cheats>
-                    <h3>CSGO Cheats</h3>
-                    <a href="https://www.youtube.com/boringchannel" target="_blank"><p>Boring Channel</p></a>
-                    <a href="https://matt1.tk/" target="_blank"><p>Matt1.tk</p></a>
-                    <a href="https://unknowncheats.me" target="_blank"><p>Unknown Cheats</p></a>
-                    <a href="https://void.to/Forum-CSGO-Releases" target="_blank"><p>Void.to CS:GO</p></a>
-                
-                </div>
                 <div id=fchan>
                     <h3>4Chane</h3>
                     <a href="http://4chan.org/b" target="_blank"><p>Random</p></a>
@@ -72,10 +64,9 @@
                     <a href="https://reddit.com/r/cpp" target="_blank"><p>C++</p></a>
                     <a href="https://reddit.com/r/c_programming" target="_blank"><p>C Programming</p></a>
                 </div>
-                <div id=weebshit>
-                    <h3> Weeb Shit</h3>
+                <div id=tv>
+                    <h3>TV</h3>
                     <a href="https://vrv.co" target="_blank"><p>VRV</p></a>
-                    <a href="https://animeheaven.ru" target="_blank"><p>Anime Heaven</p></a>
                     <a href="https://hulu.com" target="_blank"><p>Hulu</p></a>
                     <a href="https://netflix.com" target="_blank"><p>Netflix</p></a>
                     
