--- a/start-3/index.html
+++ b/start-3/index.html
@@ -7,21 +7,25 @@
 		
 		<script src="index.js"></script>
     </head>
-    <body onload="init()">
+	<body onload="init()">
+		<!--div id="CD">
+			<h1>CALM DOWN</h1>
+		</div-->
+		
 		<div id="cont"> <!-- Main container -->
 			<!-- Left -->
 			<div id="l" class="sub" onmouseover="enL()" onmouseout="ret()"> 
-				<div class="subsub">A</div>
+				<div class="subsub">Social</div>
 			</div>
 
 			<!-- Center -->
 			<div id="c" class="sub" onmouseover="enC()" onmouseout="ret()"> 
-				<div class="subsub">B</div>
+				<div class="subsub">Media</div>
 			</div>
 
 			<!-- Right -->
 			<div id="r" class="sub" onmouseover="enR()" onmouseout="ret()"> 
-				<div class="subsub">C</div>
+				<div class="subsub">Education</div>
 			</div>
 		</div-->
 
