I am so useful to society

--- a/start-3/index.html
+++ b/start-3/index.html
@@ -8,24 +8,53 @@
 		<script src="index.js"></script>
     </head>
 	<body onload="init()">
-		<!--div id="CD">
-			<h1>CALM DOWN</h1>
-		</div-->
+
+		<div id="head">
+			<h1>Date: $</h1>
+		</div>
 		
 		<div id="cont"> <!-- Main container -->
 			<!-- Left -->
 			<div id="l" class="sub" onmouseover="enL()" onmouseout="ret()"> 
-				<div class="subsub">Social</div>
+				<div class="subsub">
+					<h1>Social</h1>
+					<ul id="ll">
+						<li><a href="github.com" target="_blank">Github</a></li>
+						<li>Instagram</li>
+						<li>Twitter</li>
+						<li>Messenger</li>
+						<li>/wg/</li>
+						<li>/g/</li>
+						<li>/o/</li>
+					</ul>
+				</div>
 			</div>
 
 			<!-- Center -->
 			<div id="c" class="sub" onmouseover="enC()" onmouseout="ret()"> 
-				<div class="subsub">Media</div>
+				<div class="subsub">
+					<h1>General</h1>
+					<ul id="lc">
+						<li>Youtube</li>
+						<li>Protonmail</li>
+						<li>Gmail</li>
+						<li>VRV</li>
+						<li>Anime Heaven</li>
+					</ul>
+				</div>
 			</div>
 
 			<!-- Right -->
 			<div id="r" class="sub" onmouseover="enR()" onmouseout="ret()"> 
-				<div class="subsub">Education</div>
+				<div class="subsub">
+					<h1>Education</h1>
+					<ul id="lr">
+						<li>Drive</li>
+						<li>Docs</li>
+						<li>Canvas</li>
+						<li>W3Schools</li>
+					</ul>
+				</div>
 			</div>
 		</div-->
 
