added links and clock

--- a/start-3/index.html
+++ b/start-3/index.html
@@ -7,10 +7,10 @@
 		
 		<script src="index.js"></script>
     </head>
-	<body onload="init()">
+	<body onload="init(); updateTime24h()">
 
 		<div id="head">
-			<h1>Date: $</h1>
+			<h1 id="clock">Date: $</h1>
 		</div>
 		
 		<div id="cont"> <!-- Main container -->
@@ -19,13 +19,13 @@
 				<div class="subsub">
 					<h1>Social</h1>
 					<ul id="ll">
-						<li><a href="github.com" target="_blank">Github</a></li>
-						<li>Instagram</li>
-						<li>Twitter</li>
-						<li>Messenger</li>
-						<li>/wg/</li>
-						<li>/g/</li>
-						<li>/o/</li>
+						<li><a href="https://github.com" target="_blank">Github</a></li>
+						<li><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
+						<li><a href="https://twitter.com" target="_blank">Twitter</a></li>
+						<li><a href="https://www.messenger.com" target="_blank">Messenger</a></li>
+						<li><a href="https://boards.4chan.org/wg/" target="_blank">/wg/</a></li>
+						<li><a href="https://boards.4chan.org/g/" target="_blank">/g/</a></li>
+						<li><a href="https://boards.4chan.org/o/" target="_blank">/o/</a></li>
 					</ul>
 				</div>
 			</div>
@@ -35,11 +35,11 @@
 				<div class="subsub">
 					<h1>General</h1>
 					<ul id="lc">
-						<li>Youtube</li>
-						<li>Protonmail</li>
-						<li>Gmail</li>
-						<li>VRV</li>
-						<li>Anime Heaven</li>
+						<li><a href="https://www.youtube.com/" target="_black">Youtube</a></li>
+						<li><a href="https://protonmail.com/" target="_black">Protonmail</a></li>
+						<li><a href="https://mail.google.com/mail/u/0/#inbox" target="_black">Gmail</a></li>
+						<li><a href="https://vrv.co/" target="_black">VRV</a></li>
+						<li><a href="https://animeheaven.ru/" target="_black">Anime Heaven</a></li>
 					</ul>
 				</div>
 			</div>
@@ -49,10 +49,11 @@
 				<div class="subsub">
 					<h1>Education</h1>
 					<ul id="lr">
-						<li>Drive</li>
-						<li>Docs</li>
-						<li>Canvas</li>
-						<li>W3Schools</li>
+						<li><a href="https://drive.google.com/drive/u/0/my-drive" target="_blank">Drive</a></li>
+						<li><a href="https://docs.google.com/document/u/0/" target="_blank">Docs</a></li>
+						<li><a href="https://greenek12.instructure.com/login/ldap" target="_blank">Canvas</a></li>
+						<li><a href="https://www.w3schools.com/" target="_blank">W3Schools</a></li>
+						<li><a href="" target="_black"></a></li>
 					</ul>
 				</div>
 			</div>
