Made some changes

--- a/start-3/index.html
+++ b/start-3/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>START</title>
-		<link rel="stylesheet" href="index.css"/>
+		<link rel="stylesheet" href="style.css"/>
 		<script src="index.js"></script>
     </head>
 	<body onload="init(); updateTime24h()">
@@ -11,12 +11,12 @@
 		<div id="head">
 			<h1 id="clock">Date: $</h1>
 		</div>
-		
+
 		<div id="cont"> <!-- Main container -->
 			<!-- Left -->
-			<div id="l" class="sub" onmouseover="enL()" onmouseout="ret()"> 
+			<div id="l" class="sub" onmouseover="enL()" onmouseout="ret()">
 				<div class="subsub">
-					<h1>Social</h1>
+					<h1>Soc</h1>
 					<ul id="ll">
 						<li><a href="https://github.com" target="_blank">Github</a></li>
 						<li><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
@@ -30,9 +30,9 @@
 			</div>
 
 			<!-- Center -->
-			<div id="c" class="sub" onmouseover="enC()" onmouseout="ret()"> 
+			<div id="c" class="sub" onmouseover="enC()" onmouseout="ret()">
 				<div class="subsub">
-					<h1>General</h1>
+					<h1>Gen</h1>
 					<ul id="lc">
 						<li><a href="https://www.youtube.com/" target="_black">Youtube</a></li>
 						<li><a href="https://protonmail.com/" target="_black">Protonmail</a></li>
@@ -44,20 +44,20 @@
 			</div>
 
 			<!-- Right -->
-			<div id="r" class="sub" onmouseover="enR()" onmouseout="ret()"> 
+			<div id="r" class="sub" onmouseover="enR()" onmouseout="ret()">
 				<div class="subsub">
-					<h1>Education</h1>
+					<h1>Edu</h1>
 					<ul id="lr">
 						<li><a href="https://drive.google.com/drive/u/0/my-drive" target="_blank">Drive</a></li>
 						<li><a href="https://docs.google.com/document/u/0/" target="_blank">Docs</a></li>
 						<li><a href="https://greenek12.instructure.com/login/ldap" target="_blank">Canvas</a></li>
 						<li><a href="https://www.w3schools.com/" target="_blank">W3Schools</a></li>
-						<li><a href="" target="_black"></a></li>
+						<li><a href="https://www.khanacademy.org" target="_black">khanacademy</a></li>
 					</ul>
 				</div>
 			</div>
 		</div-->
 
-		
+
     </body>
 </html>
